# linear-regression

./: .gitignore  README.md  pyproject.toml  regression.ipynb
